--- a/trunk/src/composer.json
+++ b/trunk/src/composer.json
@@ -3,6 +3,8 @@
         "psr-4": {
             "DAG\\": "src/"
         }
+    },
+    "require": {
+        "phpmailer/phpmailer": "^6.9"
     }
 }
-
